--- a/Reports/DealX Assessment Report.html
+++ b/Reports/DealX Assessment Report.html
@@ -50,7 +50,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Sep 12, 2022 02:21:25 AM</span>
+			<span class='label blue darken-3 suite-start-time'>Sep 12, 2022 03:37:31 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -85,6 +85,7 @@
 					<li><a href='#'>@TC6_MenuNavigation</a></li>
 					<li><a href='#'>@SearchFeature</a></li>
 					<li><a href='#'>@TC1_VerifySearchResults</a></li>
+					<li><a href='#'>@TC2_VerifySearchResults</a></li>
 					<li><a href='#'>@TC3_VerifySearchResults</a></li>
 					<li><a href='#'>@ShoppingFeature</a></li>
 					<li><a href='#'>@TC5_AddItemToShoppingCart</a></li>
@@ -142,7 +143,7 @@
                     <canvas id='child-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>6</span> scenario(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>7</span> scenario(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> scenario(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -156,7 +157,7 @@
                     <canvas id='grandchild-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>17</span> step(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>18</span> step(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -180,7 +181,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Launch automationpractice.com Browser</span>
-						<span class='test-time'>Sep 12, 2022 02:21:26 AM</span>
+						<span class='test-time'>Sep 12, 2022 03:37:31 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -194,7 +195,7 @@
     <div class='category-list'>
         <span class='category label'>@OpenBrowser</span>
     </div>
-    <span class='duration right label'>0h 0m 23s+217ms</span>
+    <span class='duration right label'>0h 0m 34s+80ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: Open Browser</div>
     </div>
@@ -210,7 +211,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>Sign In</span>
-						<span class='test-time'>Sep 12, 2022 02:21:49 AM</span>
+						<span class='test-time'>Sep 12, 2022 03:38:05 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -224,7 +225,7 @@
     <div class='category-list'>
         <span class='category label'>@TC4_SignIn_scenario</span>
     </div>
-    <span class='duration right label'>0h 0m 13s+460ms</span>
+    <span class='duration right label'>0h 0m 20s+662ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: SignIn to automationpractice.com</div>
     </div>
@@ -252,7 +253,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='10'>
 					<div class='test-heading'>
 						<span class='test-name'>Navigation Menu</span>
-						<span class='test-time'>Sep 12, 2022 02:22:02 AM</span>
+						<span class='test-time'>Sep 12, 2022 03:38:26 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -266,7 +267,7 @@
     <div class='category-list'>
         <span class='category label'>@TC6_MenuNavigation</span>
     </div>
-    <span class='duration right label'>0h 0m 5s+984ms</span>
+    <span class='duration right label'>0h 0m 10s+12ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: Navigation Menu</div>
     </div>
@@ -286,7 +287,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='14'>
 					<div class='test-heading'>
 						<span class='test-name'>Verify Search Results</span>
-						<span class='test-time'>Sep 12, 2022 02:22:08 AM</span>
+						<span class='test-time'>Sep 12, 2022 03:38:36 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -297,7 +298,7 @@
     <a class="btn-floating waves-effect waves-light clear grey" title="clear"><i class='material-icons'>clear</i></a>
 </div>
 <div class='scenariooutline node' test-id='15' status='pass'>
-    <span class='duration right label'>0h 0m 4s+18ms</span>
+    <span class='duration right label'>0h 0m 10s+307ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> ScenarioOutline: Search for an item</div>
     </div>
@@ -323,22 +324,37 @@
 </div>
 <div class='scenario node' test-id='20' status='pass'>
     <div class='category-list'>
+        <span class='category label'>@TC2_VerifySearchResults</span>
+    </div>
+    <span class='duration right label'>0h 0m 21s+669ms</span>
+    <div class="bdd-test">
+        <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: Search for an item with 3 search Criteria</div>
+    </div>
+    <ul class='steps'>
+        <li test-id='21' class='node given pass' status='pass'>
+            <div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Given I Search and Verify Three different search criteria</div>
+                <div class="node-step">passed</div>
+        </li>
+    </ul>
+</div>
+<div class='scenario node' test-id='22' status='pass'>
+    <div class='category-list'>
         <span class='category label'>@TC3_VerifySearchResults</span>
     </div>
-    <span class='duration right label'>0h 0m 5s+126ms</span>
+    <span class='duration right label'>0h 0m 8s+2ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: Search for an item using Excel Sheet data input</div>
     </div>
     <ul class='steps'>
-        <li test-id='21' class='node given pass' status='pass'>
+        <li test-id='23' class='node given pass' status='pass'>
             <div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Given I search for Item in search area</div>
                 <div class="node-step">passed</div>
         </li>
-        <li test-id='22' class='node and pass' status='pass'>
+        <li test-id='24' class='node and pass' status='pass'>
             <div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>And I click on search button</div>
                 <div class="node-step">passed</div>
         </li>
-        <li test-id='23' class='node then pass' status='pass'>
+        <li test-id='25' class='node then pass' status='pass'>
             <div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Then I verify the first item matches the search criteria</div>
                 <div class="node-step">passed</div>
         </li>
@@ -346,10 +362,10 @@
 </div>
 					</div>
 				</li>
-				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='24'>
+				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='26'>
 					<div class='test-heading'>
 						<span class='test-name'>Shopping</span>
-						<span class='test-time'>Sep 12, 2022 02:22:18 AM</span>
+						<span class='test-time'>Sep 12, 2022 03:39:16 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -359,28 +375,28 @@
     <a class="btn-floating waves-effect waves-light skip blue" title="skip"><i class='material-icons'>redo</i></a>
     <a class="btn-floating waves-effect waves-light clear grey" title="clear"><i class='material-icons'>clear</i></a>
 </div>
-<div class='scenariooutline node' test-id='25' status='pass'>
-    <span class='duration right label'>0h 0m 14s+80ms</span>
+<div class='scenariooutline node' test-id='27' status='pass'>
+    <span class='duration right label'>0h 0m 17s+303ms</span>
     <div class="bdd-test">
         <div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> ScenarioOutline: Add item to shopping cart</div>
     </div>
     <ul class='steps'>
-        <li test-id='26' class='node scenario pass' status='pass'>
+        <li test-id='28' class='node scenario pass' status='pass'>
             <div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Add item to shopping cart</div>
             <ul class='gc steps'>
-                    <li test-id='27' class='gc given pass' status='pass'>
+                    <li test-id='29' class='gc given pass' status='pass'>
                         <h6 class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Given I add item to shopping cart</h6>
                             <div class="node-step">passed</div>
                     </li>
-                    <li test-id='28' class='gc when pass' status='pass'>
+                    <li test-id='30' class='gc when pass' status='pass'>
                         <h6 class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>When I view shopping cart</h6>
                             <div class="node-step">passed</div>
                     </li>
-                    <li test-id='29' class='gc and pass' status='pass'>
+                    <li test-id='31' class='gc and pass' status='pass'>
                         <h6 class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>And I increase "3" quantity</h6>
                             <div class="node-step">passed</div>
                     </li>
-                    <li test-id='30' class='gc then pass' status='pass'>
+                    <li test-id='32' class='gc then pass' status='pass'>
                         <h6 class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Then I calculate and verify total amount</h6>
                             <div class="node-step">passed</div>
                     </li>
@@ -452,7 +468,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:21:26 AM</td>
+										<td>Sep 12, 2022 03:37:31 PM</td>
 										<td class='linked' test-id='1'>Launch automationpractice.com Browser</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -485,7 +501,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:21:26 AM</td>
+										<td>Sep 12, 2022 03:37:31 PM</td>
 										<td class='linked' test-id='2'>Launch automationpractice.com Browser.Open Browser</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -518,7 +534,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:21:49 AM</td>
+										<td>Sep 12, 2022 03:38:05 PM</td>
 										<td class='linked' test-id='4'>Sign In</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -551,7 +567,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:21:49 AM</td>
+										<td>Sep 12, 2022 03:38:05 PM</td>
 										<td class='linked' test-id='5'>Sign In.SignIn to automationpractice.com</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -584,7 +600,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:02 AM</td>
+										<td>Sep 12, 2022 03:38:26 PM</td>
 										<td class='linked' test-id='10'>Navigation Menu</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -617,7 +633,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:02 AM</td>
+										<td>Sep 12, 2022 03:38:26 PM</td>
 										<td class='linked' test-id='11'>Navigation Menu.Navigation Menu</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -650,12 +666,12 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:08 AM</td>
+										<td>Sep 12, 2022 03:38:36 PM</td>
 										<td class='linked' test-id='14'>Verify Search Results</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Sep 12, 2022 02:22:08 AM</td>
+										<td>Sep 12, 2022 03:38:36 PM</td>
 										<td class='linked' test-id='16'>Verify Search Results.Search for an item.Search for an item</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -688,8 +704,41 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:08 AM</td>
+										<td>Sep 12, 2022 03:38:36 PM</td>
 										<td class='linked' test-id='16'>Verify Search Results.Search for an item.Search for an item</td>
+										<td><span class='test-status pass'>pass</span></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</li>
+				<li class='category displayed active'>
+					<div class='category-heading'>
+						<span class='category-name'>@TC2_VerifySearchResults</span>
+						<span class='category-status right'>
+						<span class='label pass'>1</span>
+						</span>
+					</div>
+					<div class='category-content hide'>
+						<div class='category-status-counts'>
+							<span status="pass" class='label green accent-4 white-text'>Passed: 1</span>
+							
+							
+						</div>
+						<div class='category-tests'>
+							<table class='bordered table-results'>
+								<thead>
+									<tr>
+										<th>Timestamp</th>
+										<th>TestName</th>
+										<th>Status</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>Sep 12, 2022 03:38:46 PM</td>
+										<td class='linked' test-id='20'>Verify Search Results.Search for an item with 3 search Criteria</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -721,8 +770,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:13 AM</td>
-										<td class='linked' test-id='20'>Verify Search Results.Search for an item using Excel Sheet data input</td>
+										<td>Sep 12, 2022 03:39:08 PM</td>
+										<td class='linked' test-id='22'>Verify Search Results.Search for an item using Excel Sheet data input</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -754,13 +803,13 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:18 AM</td>
-										<td class='linked' test-id='24'>Shopping</td>
+										<td>Sep 12, 2022 03:39:16 PM</td>
+										<td class='linked' test-id='26'>Shopping</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Sep 12, 2022 02:22:18 AM</td>
-										<td class='linked' test-id='26'>Shopping.Add item to shopping cart.Add item to shopping cart</td>
+										<td>Sep 12, 2022 03:39:16 PM</td>
+										<td class='linked' test-id='28'>Shopping.Add item to shopping cart.Add item to shopping cart</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -792,8 +841,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Sep 12, 2022 02:22:18 AM</td>
-										<td class='linked' test-id='26'>Shopping.Add item to shopping cart.Add item to shopping cart</td>
+										<td>Sep 12, 2022 03:39:16 PM</td>
+										<td class='linked' test-id='28'>Shopping.Add item to shopping cart.Add item to shopping cart</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -824,31 +873,31 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Scenarios
-					<div class='panel-lead'>6</div>
+					<div class='panel-lead'>7</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>17</div>
+					<div class='panel-lead'>18</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 12, 2022 02:21:25 AM</div>
+					<div class='panel-lead'>Sep 12, 2022 03:37:31 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 12, 2022 02:22:32 AM</div>
+			 		<div class='panel-lead'>Sep 12, 2022 03:39:33 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 6s+581ms</div>
+					<div class='panel-lead'>0h 2m 2s+406ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -956,6 +1005,15 @@
 							</td>
 						</tr>
 						<tr>
+							<td>@TC2_VerifySearchResults</td>
+							<td>1</td>
+							<td>0</td>
+							<td>0</td>
+							<td>
+									100%
+							</td>
+						</tr>
+						<tr>
 							<td>@TC3_VerifySearchResults</td>
 							<td>1</td>
 							<td>0</td>
@@ -1001,8 +1059,8 @@
 				warningParent: 0,
 				skipParent: 0,
 				exceptionsParent: 0,
-				childCount: 6,
-				passChild: 6,
+				childCount: 7,
+				passChild: 7,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
@@ -1011,8 +1069,8 @@
 				infoChild: 0,
 				debugChild: 0,
 				exceptionsChild: 0,
-				grandChildCount: 17,
-				passGrandChild: 17,
+				grandChildCount: 18,
+				passGrandChild: 18,
 				failGrandChild: 0,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
@@ -1025,7 +1083,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Launch automationpractice.com Browser":23.217,"Sign In":13.46,"Navigation Menu":5.984,"Verify Search Results":9.148,"Shopping":14.08
+			        "Launch automationpractice.com Browser":34.08,"Sign In":20.662,"Navigation Menu":10.012,"Verify Search Results":39.981,"Shopping":17.303
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
